# publish-python-package

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
